--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             <div class="box">
                 <div class="box-img"><img src="assets/images/cars2.jpeg" alt="car image"></div>
                 <p>2025</p>
-                <h3>Mahindra Squarpio</h3>
-                <h2>₹16,00,000 | ₹60,000 <span>/month</span></h2>
+                <h3>Mahindra Scorpio</h3>
+                <h2>₹16,00,000 | ₹30,000 <span>/month</span></h2>
                 <a href="#" class="btn">Rent Now</a>
             </div>
 
@@ -113,7 +113,7 @@
                 <div class="box-img"><img src="assets/images/cars3.jpeg" alt="car image"></div>
                 <p>2025</p>
                 <h3>Mahindra Thar</h3>
-                <h2>₹11,00,000 | ₹65,000 <span>/month</span></h2>
+                <h2>₹11,00,000 | ₹40,000 <span>/month</span></h2>
                 <a href="#" class="btn">Rent Now</a>
             </div>
 
@@ -121,7 +121,7 @@
                 <div class="box-img"><img src="assets/images/cars4.jpeg" alt="car image"></div>
                 <p>2023</p>
                 <h3>Fortuner</h3>
-                <h2>₹33,00,000 | ₹80,000 <span>/month</span></h2>
+                <h2>₹33,00,000 | ₹50,000 <span>/month</span></h2>
                 <a href="#" class="btn">Rent Now</a>
             </div>
 
@@ -137,7 +137,7 @@
                 <div class="box-img"><img src="assets/images/cars6.jpg" alt="car image"></div>
                 <p>2025</p>
                 <h3>Toyata Coralla</h3>
-                <h2>₹16,00,000 | ₹50,000 <span>/month</span></h2>
+                <h2>₹16,00,000 | ₹40,000 <span>/month</span></h2>
                 <a href="#" class="btn">Rent Now</a>
             </div>
         </div>
